# bazel_rules_install

./: .gitignore  WORKSPACE  deps.bzl  setup.bzl
installer/: BUILD.bazel  installer_tool.py
