# Copyright 2018 The Bazel Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:defs.bzl", "py_binary")

licenses(["notice"])  # Apache 2.0

exports_files(
    ["def.bzl"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "installer_template",
    srcs = ["installer.bash.template"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "installer",
    srcs = [
        "def.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//lib:shell",
    ],
)

py_binary(
    name = "installer_tool",
    srcs = [
        "installer_tool.py",
    ],
    visibility = ["//visibility:public"],
    deps = ["@rules_python//python/runfiles"],
)
